feat: Spring1 fini + paramétrage Mongo utilisant appsettings.json

--- a/api-core.net/src/api-core.net/appsettings.json
+++ b/api-core.net/src/api-core.net/appsettings.json
@@ -6,5 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "MongoDB": {
+    "Url": "localhost",
+    "Port":  27017
   }
 }
