--- a/api-core.net/Dockerfile
+++ b/api-core.net/Dockerfile
@@ -1,6 +1,6 @@
 FROM api-core.net-base
 ADD /src /app
-WORKDIR /app
+WORKDIR /app/api-core.net
 RUN ["dotnet", "restore"]
 EXPOSE 5004
 ENTRYPOINT ["dotnet", "run"]
