--- a/quizzLeapProject/QuizzByLeapMotionProject/QuizzByLeapMotionProject/QuizzByLeapMotionProject.csproj
+++ b/quizzLeapProject/QuizzByLeapMotionProject/QuizzByLeapMotionProject/QuizzByLeapMotionProject.csproj
@@ -44,11 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormUrlEncodedContent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Content Include="test.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
