--- a/api-core.net/src/api-core.net/project.json
+++ b/api-core.net/src/api-core.net/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "dependencies": {
     "Microsoft.NETCore.App": {
       "version": "1.0.1",
@@ -16,7 +16,8 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
-    "mongocsharpdriver": "2.4.1"
+    "mongocsharpdriver": "2.4.1",
+    "Swashbuckle.AspNetCore": "1.0.0-rc1"
   },
 
   "tools": {
