--- a/api-node.js/package.json
+++ b/api-node.js/package.json
@@ -12,6 +12,9 @@
   "dependencies" : {
     "express"         : "~4.7.2",
     "body-parser"     : "~1.4.3",
-    "method-override" : "~2.1.1"
+    "method-override" : "~2.1.1",
+    "swagger-node-express":"~2.0",
+    "minimist": "*",
+    "body-parser": "1.9.x",
   }
 }
