fix: Refactor Dockerfiles

--- a/web-client-core-asp.net/Dockerfile
+++ b/web-client-core-asp.net/Dockerfile
@@ -1,6 +1,6 @@
 FROM esaipnet/api-core.net-base
-ADD /src /app
-WORKDIR /app/api-core.net
+ADD . /app
+WORKDIR /app
 RUN ["dotnet", "restore"]
 EXPOSE 80
 ENTRYPOINT ["dotnet", "run"]
