--- a/api-node.js/Dockerfile
+++ b/api-node.js/Dockerfile
@@ -1,4 +1,4 @@
-FROM nodebase
+FROM esaipnet/api-node.js-base
 ADD package.json /tmp/package.json
 RUN cd /tmp && npm install
 RUN mkdir -p /opt/app && cp -a /tmp/node_modules /opt/app/
