--- a/api-core.net/Dockerfile
+++ b/api-core.net/Dockerfile
@@ -1,4 +1,8 @@
 FROM esaipnet/api-core.net-base
+
+ENV MONGO_URL_PORT localhost:27017
+ENV MONGO_DATABASE quiz
+
 ADD /src /app
 WORKDIR /app/api-core.net
 RUN ["dotnet", "restore"]
