--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '2'
 services:
-    web-core:
+    client-net:
         build: web-client-core-asp.net
         ports:
         - "80:80"
         image: "esaipnet/web-client-core-asp:1.0"
-    api-core:
+    api-net:
         build: api-core.net
         ports:
         - "81:80"
