fix(Dockerfile): Dockerfile web-client-core-asp.net
Modification des routes du dockerfile

--- a/web-client-core-asp.net/Dockerfile
+++ b/web-client-core-asp.net/Dockerfile
@@ -1,6 +1,10 @@
 FROM esaipnet/api-core.net-base:1.0
-ADD . /app
-WORKDIR /app
+
+
+
+
+ADD /src /app
+WORKDIR /app/web-client-core-asp.net
 RUN ["dotnet", "restore"]
 EXPOSE 80
 ENTRYPOINT ["dotnet", "run"]
