fix(Dockerfile): nom du dossier
remplacer "web-client-core-asp.net" par "WebClientCore"

--- a/web-client-core-asp.net/Dockerfile
+++ b/web-client-core-asp.net/Dockerfile
@@ -4,7 +4,7 @@ FROM esaipnet/api-core.net-base:1.0
 
 
 ADD /src /app
-WORKDIR /app/web-client-core-asp.net
+WORKDIR /app/WebClientCore
 RUN ["dotnet", "restore"]
 EXPOSE 80
 ENTRYPOINT ["dotnet", "run"]
