fix(Dockerfile): NodeJS
idem

--- a/api-node.js/Dockerfile
+++ b/api-node.js/Dockerfile
@@ -1,6 +1,6 @@
 FROM esaipnet/api-node.js-base:1.0
 
-ENV MONGO_URL_PORT http://13.95.14.230:27017
+ENV MONGO_URL_PORT "http://13.95.14.230:27017"
 ENV MONGO_DATABASE quiz
 
 ADD package.json /tmp/package.json
