--- a/quizzLeapProject/QuizzByLeapMotionProject/QuizzByLeapMotionProject/QuizzByLeapMotionProject.csproj
+++ b/quizzLeapProject/QuizzByLeapMotionProject/QuizzByLeapMotionProject/QuizzByLeapMotionProject.csproj
@@ -36,6 +36,7 @@
       <HintPath>..\..\..\..\..\Ludo pc\IR_2017\QuizzProject\LeapDeveloperKit_2.3.1+31549_win\LeapSDK\lib\LeapCSharp.NET4.0.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,7 +50,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="test.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
