fix: Localize default Mongo URL/Database values in appsettings.json

--- a/api-core.net/src/api-core.net/appsettings.json
+++ b/api-core.net/src/api-core.net/appsettings.json
@@ -6,6 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Mongo": {
+    "Url": "localhost:27017",
+    "Database": "quiz"
   }
-  
 }
