fix: mongoDB URL set to service name instead of localhost

--- a/api-node.js/Dockerfile
+++ b/api-node.js/Dockerfile
@@ -7,7 +7,7 @@ RUN mkdir -p /opt/app && cp -a /tmp/node_modules /opt/app/
 WORKDIR /opt/app
 ADD . /opt/app
 
-ENV MONGO_URL_PORT "13.95.14.230:27017"
+ENV MONGO_URL_PORT db-mongo:27017
 ENV MONGO_DATABASE quiz
 
 EXPOSE 80
