Ajout du HAProxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,23 @@ services:
         build: web-client-core-asp.net
         ports:
         - "80:80"
-        image: "esaipnet/web-client-core-asp:1.0"
+        image: "jtony/web-client-core-asp:1.0"
     api-net:
         build: api-core.net
         ports:
         - "81:80"
-        image: "esaipnet/api-core.net:1.0"
+        image: "jtony/api-core.net:1.0"
     api-node:
         build: api-node.js
         ports:
         - "82:80"
-        image: "esaipnet/api-node.js:1.0"
+        image: "jtony/api-node.js:1.0"
     db-mongo:
         image: "mongo:3.0.3"
         ports:
         - "27017:27017"
+    haproxy:
+        image: "jtony/haproxy:1.0"
+        links:
+        - api-net
+        - api-node
