Changement variables environnement et EXPOSE

--- a/api-core.net/Dockerfile
+++ b/api-core.net/Dockerfile
@@ -1,10 +1,10 @@
 FROM esaipnet/api-core.net-base:1.0
 
-ENV MONGO_URL_PORT localhost:27017
+ENV MONGO_URL_PORT db-mongo:27017
 ENV MONGO_DATABASE quiz
 
 ADD /src /app
 WORKDIR /app/api-core.net
 RUN ["dotnet", "restore"]
-EXPOSE 5004
+EXPOSE 80
 ENTRYPOINT ["dotnet", "run"]
