Ajout variables d'environnement et ajout d'un quiz
Ajout d'un quiz sans les réponses

--- a/web-client-core-asp.net/Dockerfile
+++ b/web-client-core-asp.net/Dockerfile
@@ -1,10 +1,10 @@
 FROM esaipnet/api-core.net-base:1.0
 
-
-
+ENV API_URL_PORT localhost:81
+ENV DB_NAME quiz
 
 ADD /src /app
 WORKDIR /app/WebClientCore
 RUN ["dotnet", "restore"]
-EXPOSE 5004
+EXPOSE 80
 ENTRYPOINT ["dotnet", "run"]
