chore: Modification api pour utilisation en local, avec BDD Mongo

--- a/api-core.net/src/api-core.net/appsettings.json
+++ b/api-core.net/src/api-core.net/appsettings.json
@@ -6,6 +6,11 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "MongoDB": {
+    // "Url": "coreosjpg.cloudapp.net",
+    "Url": "localhost",
+    "Port": 27017
   }
-  
+
 }
