Interface d'ajout de question WebClient

--- a/web-client-core-asp.net/Dockerfile
+++ b/web-client-core-asp.net/Dockerfile
@@ -1,10 +1,9 @@
 FROM esaipnet/api-core.net-base:1.0
 
-ENV API_URL_PORT api-net:81
-ENV DB_NAME quiz
+ENV API_URL_PORT localhost:80
 
 ADD /src /app
 WORKDIR /app/WebClientCore
 RUN ["dotnet", "restore"]
-EXPOSE 80
+EXPOSE 5004
 ENTRYPOINT ["dotnet", "run"]
